; ModuleID = '/home/carl/AnghaBench/linux/drivers/char/hw_random/extr_optee-rng.c_optee_rng_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/char/hw_random/extr_optee-rng.c_optee_rng_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hwrng = type { i32 }
%struct.optee_rng_private = type { %struct.tee_shm*, i32, i32 }
%struct.tee_shm = type { i32 }

@MAX_ENTROPY_REQ_SZ = common dso_local global i32 0, align 4
@TEE_SHM_MAPPED = common dso_local global i32 0, align 4
@TEE_SHM_DMA_BUF = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"tee_shm_alloc failed\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hwrng*)* @optee_rng_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @optee_rng_init(%struct.hwrng* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.hwrng*, align 8
  %4 = alloca %struct.optee_rng_private*, align 8
  %5 = alloca %struct.tee_shm*, align 8
  store %struct.hwrng* %0, %struct.hwrng** %3, align 8
  %6 = load %struct.hwrng*, %struct.hwrng** %3, align 8
  %7 = call %struct.optee_rng_private* @to_optee_rng_private(%struct.hwrng* %6)
  store %struct.optee_rng_private* %7, %struct.optee_rng_private** %4, align 8
  store %struct.tee_shm* null, %struct.tee_shm** %5, align 8
  %8 = load %struct.optee_rng_private*, %struct.optee_rng_private** %4, align 8
  %9 = getelementptr inbounds %struct.optee_rng_private, %struct.optee_rng_private* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @MAX_ENTROPY_REQ_SZ, align 4
  %12 = load i32, i32* @TEE_SHM_MAPPED, align 4
  %13 = load i32, i32* @TEE_SHM_DMA_BUF, align 4
  %14 = or i32 %12, %13
  %15 = call %struct.tee_shm* @tee_shm_alloc(i32 %10, i32 %11, i32 %14)
  store %struct.tee_shm* %15, %struct.tee_shm** %5, align 8
  %16 = load %struct.tee_shm*, %struct.tee_shm** %5, align 8
  %17 = call i64 @IS_ERR(%struct.tee_shm* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %26

19:                                               ; preds = %1
  %20 = load %struct.optee_rng_private*, %struct.optee_rng_private** %4, align 8
  %21 = getelementptr inbounds %struct.optee_rng_private, %struct.optee_rng_private* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  %23 = call i32 @dev_err(i32 %22, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %24 = load %struct.tee_shm*, %struct.tee_shm** %5, align 8
  %25 = call i32 @PTR_ERR(%struct.tee_shm* %24)
  store i32 %25, i32* %2, align 4
  br label %30

26:                                               ; preds = %1
  %27 = load %struct.tee_shm*, %struct.tee_shm** %5, align 8
  %28 = load %struct.optee_rng_private*, %struct.optee_rng_private** %4, align 8
  %29 = getelementptr inbounds %struct.optee_rng_private, %struct.optee_rng_private* %28, i32 0, i32 0
  store %struct.tee_shm* %27, %struct.tee_shm** %29, align 8
  store i32 0, i32* %2, align 4
  br label %30

30:                                               ; preds = %26, %19
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local %struct.optee_rng_private* @to_optee_rng_private(%struct.hwrng*) #1

declare dso_local %struct.tee_shm* @tee_shm_alloc(i32, i32, i32) #1

declare dso_local i64 @IS_ERR(%struct.tee_shm*) #1

declare dso_local i32 @dev_err(i32, i8*) #1

declare dso_local i32 @PTR_ERR(%struct.tee_shm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
